syntax = "proto3";

import "gogo.proto";
import "annotations.proto";
package vsrv.pb.video;
option go_package = "vsrvpb";

option (gogoproto.goproto_registration) = true;

service VideoService {
  rpc CreateVideo(CreateVideoReq) returns (Video){
    option (google.api.http) = {
        post: "/video"
        body: "*"
      };    
  };
  rpc GetVideo(GetVideoReq) returns (Video){
    option (google.api.http) = {
        get: "/video/{video_id}"
      };    
  };
  rpc GetVideoList(GetVideoListReq) returns (GetVideoListRes){
    option (google.api.http) = {
        get: "/video"
      };    
  };
  rpc UpdateVideo(UpdateVideoReq) returns (UpdateVideoRes){
    option (google.api.http) = {
        put: "/video/{video_id}"
        body: "*"
      };    
  };
  rpc DeleteVideo(DeleteVideoReq) returns (DeleteVideoRes){
    option (google.api.http) = {
        delete: "/video/{video_id}"
      };    
  };
}

message Video {
  int64 video_id = 1;
  string title = 2;
  string summary = 3;
  int64 created_at = 4;
  string poster = 5;
  string url = 6;
}

message CreateVideoReq {
  string title = 1;
  string summary = 2;
  string poster = 3;
  string url = 4;
}

message UpdateVideoReq {
  int64 video_id = 1;
  string title = 2;
  string summary = 3;
  string poster = 4;
  string url = 5;
}

message GetVideoListReq {
  int64 type_id = 1;
  int64 page = 2;
  int64 page_size = 3;
}

message GetVideoListRes { repeated Video videos = 1; }

message UpdateVideoRes { bool ok = 1; }

message DeleteVideoReq { int64 video_id = 1; }

message DeleteVideoRes { bool ok = 1; }

message GetVideoReq { int64 video_id = 1; }